--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "^0.18.19",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-router-native": "^6.21.2"
+    "react-native-elements": "^3.4.3",
+    "react-router-native": "^6.21.2",
+    "react-toastify": "^10.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
