--- a/package.json
+++ b/package.json
@@ -9,23 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "dotenv": "^16.3.1",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "^0.18.19",
+    "expo": "^50.0.4",
+    "expo-status-bar": "^1.11.1",
+    "expo-updates": "^0.24.9",
+    "invariant": "^2.2.4",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
+    "react-native-check-box": "^2.1.7",
+    "react-native-date-picker": "^4.3.5",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-screens": "^3.29.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-web": "~0.19.6",
     "react-router-native": "^6.21.2",
     "react-toastify": "^10.0.3"
   },
