--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
-    "expo": "^50.0.4",
+    "expo": "~50.0.5",
     "expo-status-bar": "^1.11.1",
     "expo-updates": "^0.24.9",
     "invariant": "^2.2.4",
