--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watch --detectOpenHandles"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.1",
+    "@expo/webpack-config": "~19.0.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/themed": "^4.0.0-rc.8",
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "~50.0.5",
-    "expo-status-bar": "^1.11.1",
-    "expo-updates": "^0.24.9",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.9",
     "invariant": "^2.2.4",
+    "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
@@ -32,8 +35,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
     "react-native-picker-select": "^9.0.1",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.29.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.21.2",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
     "react-native-dotenv": "^3.4.9"
   },
   "private": true
