--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.2.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
-    "expo": "~50.0.5",
+    "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.9",
+    "expo-updates": "^0.24.12",
     "invariant": "^2.2.4",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.5",
     "react-native-check-box": "^2.1.7",
     "react-native-date-picker": "^4.3.5",
     "react-native-elements": "^3.4.3",
@@ -39,6 +40,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.0",
     "react-router-native": "^6.21.2",
     "react-toastify": "^10.0.3"
   },
