--- a/package.json
+++ b/package.json
@@ -17,25 +17,28 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-picker/picker": "2.6.1",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "^0.24.12",
+    "expo-updates": "~0.24.12",
     "invariant": "^2.2.4",
-    "jest": "^29.7.0",
+    "jest": "^29.3.1",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
-    "react-native": "^0.73.5",
+    "react-native": "0.73.6",
     "react-native-check-box": "^2.1.7",
     "react-native-date-picker": "^4.3.5",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-picker-select": "^9.0.1",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-toast-message": "^2.2.0",
