--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch --detectOpenHandles"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@expo/webpack-config": "~19.0.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
@@ -23,13 +24,11 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "dotenv": "^16.3.1",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
     "invariant": "^2.2.4",
     "jest": "^29.3.1",
-    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-check-box": "^2.1.7",
@@ -37,6 +36,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
@@ -48,9 +48,16 @@
     "react-toastify": "^10.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.3",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-class-properties": "^7.24.1",
+    "@babel/plugin-transform-flow-strip-types": "^7.24.1",
+    "@babel/plugin-transform-private-methods": "^7.24.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.1",
+    "@babel/preset-env": "^7.24.3",
     "@testing-library/react-native": "^12.4.3",
-    "react-native-dotenv": "^3.4.9"
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
