--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "qf-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "prettier": {
+    "printWidth": 220
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
