--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/slider": "^4.5.1",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
