--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-community/slider": "^4.5.1",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -29,6 +29,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.13",
+    "expo-dev-client": "^3.3.11",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
     "invariant": "^2.2.4",
@@ -52,7 +53,7 @@
     "react-toastify": "^10.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.3",
+    "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-class-properties": "^7.24.1",
     "@babel/plugin-transform-flow-strip-types": "^7.24.1",
