--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@expo/webpack-config": "~19.0.1",
+    "@firebase/messaging": "^0.12.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/slider": "4.4.2",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/messaging": "^19.2.2",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -30,8 +33,10 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.13",
     "expo-dev-client": "^3.3.11",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
+    "firebase": "^10.12.0",
     "invariant": "^2.2.4",
     "jest": "^29.3.1",
     "react": "18.2.0",
@@ -50,7 +55,10 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
     "react-router-native": "^6.21.2",
-    "react-toastify": "^10.0.3"
+    "react-toastify": "^10.0.3",
+    "expo-notifications": "~0.27.7",
+    "expo-device": "~5.9.4",
+    "expo-constants": "~15.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
