--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "react-toastify": "^10.0.3",
     "expo-notifications": "~0.27.7",
     "expo-device": "~5.9.4",
-    "expo-constants": "~15.4.6"
+    "expo-constants": "~15.4.6",
+    "expo-location": "~16.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
