--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,14 @@
         "buildType": "apk"
       }
     },
-    "production": {}
+    "production": {
+      "env": {
+        "ENVFILE": ".env.prod"
+      },
+      "android": {
+        "buildType": "apk"
+      }
+    }
   },
   "submit": {
     "production": {}
