--- a/package.json
+++ b/package.json
@@ -12,66 +12,61 @@
     "web": "expo start --web",
     "test": "jest --watch --detectOpenHandles"
   },
+  "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@expo/webpack-config": "~19.0.1",
-    "@firebase/messaging": "^0.12.9",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-community/slider": "4.4.2",
-    "@react-native-firebase/app": "^19.2.2",
-    "@react-native-firebase/messaging": "^19.2.2",
-    "@react-native-picker/picker": "2.6.1",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@reduxjs/toolkit": "^2.2.1",
-    "@rneui/themed": "^4.0.0-rc.8",
-    "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~50.0.13",
-    "expo-dev-client": "^3.3.11",
-    "expo-permissions": "^14.4.0",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
-    "firebase": "^10.12.0",
-    "invariant": "^2.2.4",
-    "jest": "^29.3.1",
-    "react": "18.2.0",
+    "@babel/core": "7.24.6",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-private-methods": "7.18.6",
+    "@babel/plugin-transform-class-properties": "7.24.6",
+    "@babel/plugin-transform-flow-strip-types": "7.24.6",
+    "@babel/plugin-transform-private-methods": "7.24.6",
+    "@babel/plugin-transform-private-property-in-object": "7.24.6",
+    "@babel/preset-env": "7.24.6",
+    "@expo/webpack-config": "19.0.1",
+    "@firebase/messaging": "0.12.9",
+    "@fortawesome/free-solid-svg-icons": "6.5.2",
+    "@fortawesome/react-native-fontawesome": "0.3.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/checkbox": "0.5.17",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-native-firebase/app": "20.0.0",
+    "@react-native-firebase/messaging": "20.0.0",
+    "@react-native-picker/picker": "2.7.6",
+    "@react-navigation/bottom-tabs": "6.5.20",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native-stack": "6.9.26",
+    "@reduxjs/toolkit": "2.2.5",
+    "@rneui/themed": "4.0.0-rc.8",
+    "deprecated-react-native-prop-types": "5.0.0",
+    "expo": "50.0.19",
+    "expo-constants": "16.0.1",
+    "expo-dev-client": "4.0.14",
+    "expo-device": "6.0.2",
+    "expo-location": "17.0.1",
+    "expo-notifications": "0.28.3",
+    "expo-permissions": "14.4.0",
+    "expo-status-bar": "1.12.1",
+    "expo-system-ui": "3.0.4",
+    "expo-updates": "0.25.14",
+    "firebase": "10.12.2",
+    "invariant": "2.2.4",
+    "jest": "29.7.0",
+    "metro-react-native-babel-preset": "0.77.0",
     "react-native": "0.73.6",
-    "react-native-check-box": "^2.1.7",
-    "react-native-date-picker": "^4.3.5",
-    "react-native-elements": "^3.4.3",
-    "react-native-fontawesome": "^7.0.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-paper": "^5.12.3",
-    "react-native-picker-select": "^9.0.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-toast-message": "^2.2.0",
-    "react-native-web": "~0.19.6",
-    "react-redux": "^9.1.0",
-    "react-router-native": "^6.21.2",
-    "react-toastify": "^10.0.3",
-    "expo-notifications": "~0.27.7",
-    "expo-device": "~5.9.4",
-    "expo-constants": "~15.4.6",
-    "expo-location": "~16.5.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-class-properties": "^7.24.1",
-    "@babel/plugin-transform-flow-strip-types": "^7.24.1",
-    "@babel/plugin-transform-private-methods": "^7.24.1",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.1",
-    "@babel/preset-env": "^7.24.3",
-    "@testing-library/react-native": "^12.4.3",
-    "metro-react-native-babel-preset": "^0.77.0",
-    "react-native-dotenv": "^3.4.11"
-  },
-  "private": true
+    "react-native-check-box": "2.1.7",
+    "react-native-date-picker": "5.0.3",
+    "react-native-dotenv": "3.4.11",
+    "react-native-elements": "3.4.3",
+    "react-native-fontawesome": "7.0.0",
+    "react-native-gesture-handler": "2.14.0",
+    "react-native-paper": "5.12.3",
+    "react-native-picker-select": "9.1.3",
+    "react-native-reanimated": "3.11.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-toast-message": "2.2.0",
+    "react-redux": "9.1.2",
+    "react-router-native": "6.23.1"
+  }
 }
