--- a/package.json
+++ b/package.json
@@ -1,75 +1,73 @@
 {
   "name": "qf-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "prettier": {
-    "printWidth": 220
-  },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watch --detectOpenHandles"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
-  "private": true,
   "dependencies": {
-    "@babel/core": "^7.24.6",
-    "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-proposal-private-methods": "7.18.6",
-    "@babel/plugin-transform-class-properties": "7.24.6",
-    "@babel/plugin-transform-flow-strip-types": "7.24.6",
-    "@babel/plugin-transform-private-methods": "7.24.6",
-    "@babel/plugin-transform-private-property-in-object": "7.24.6",
-    "@babel/preset-env": "7.24.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-transform-class-properties": "^7.24.6",
+    "@babel/plugin-transform-flow-strip-types": "^7.24.6",
+    "@babel/plugin-transform-private-methods": "^7.24.6",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@expo/config": "~8.1.1",
     "@expo/webpack-config": "^19.0.1",
-    "@firebase/messaging": "0.12.9",
-    "@fortawesome/free-solid-svg-icons": "6.5.2",
-    "@fortawesome/react-native-fontawesome": "0.3.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/checkbox": "0.5.17",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-community/slider": "4.5.2",
-    "@react-native-firebase/app": "20.0.0",
-    "@react-native-firebase/messaging": "20.0.0",
-    "@react-native-picker/picker": "2.7.6",
-    "@react-navigation/bottom-tabs": "6.5.20",
-    "@react-navigation/native": "6.1.17",
-    "@react-navigation/native-stack": "6.9.26",
-    "@reduxjs/toolkit": "2.2.5",
-    "@rneui/themed": "4.0.0-rc.8",
-    "deprecated-react-native-prop-types": "5.0.0",
-    "eas-cli": "^9.1.0",
-    "expo": "^51.0.9",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.15",
-    "expo-device": "~6.0.2",
-    "expo-location": "~17.0.1",
-    "expo-notifications": "^0.28.4",
-    "expo-permissions": "14.4.0",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
-    "expo-updates": "~0.25.15",
-    "firebase": "10.12.2",
-    "invariant": "2.2.4",
+    "@firebase/messaging": "^0.12.9",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/cli-platform-android": "^13.6.6",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "4.4.2",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/messaging": "^20.0.0",
+    "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.13",
+    "expo-device": "~5.4.0",
+    "expo-location": "~16.1.0",
+    "expo-notifications": "~0.20.1",
+    "expo-permissions": "~14.2.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.19",
+    "firebase": "^10.12.2",
+    "invariant": "^2.2.4",
     "jest": "^29.7.0",
-    "metro-react-native-babel-preset": "0.77.0",
-    "react": "18.3.1",
-    "react-native": "0.74.1",
-    "react-native-check-box": "2.1.7",
-    "react-native-date-picker": "5.0.4",
-    "react-native-dotenv": "3.4.11",
-    "react-native-elements": "3.4.3",
-    "react-native-fontawesome": "7.0.0",
-    "react-native-gesture-handler": "~2.16.2",
-    "react-native-paper": "5.12.3",
-    "react-native-picker-select": "9.1.3",
-    "react-native-reanimated": "~3.11.0",
-    "react-native-safe-area-context": "4.10.3",
-    "react-native-screens": "3.31.1",
-    "react-native-toast-message": "2.2.0",
-    "react-native-unimodules": "^0.14.10",
-    "react-redux": "9.1.2",
-    "react-router-native": "6.23.1"
-  }
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react": "18.2.0",
+    "react-native": "0.72.10",
+    "react-native-check-box": "^2.1.7",
+    "react-native-date-picker": "^5.0.4",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-redux": "^9.1.2",
+    "react-router-native": "^6.23.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
