--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qf-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -16,6 +16,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@expo/config": "~8.1.1",
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.1",
     "@firebase/messaging": "^0.12.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -38,6 +39,7 @@
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.13",
     "expo-device": "~5.4.0",
+    "expo-font": "~11.4.0",
     "expo-location": "~16.1.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "~14.2.1",
