--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2",
-    "react-router-native": "^6.23.1"
+    "react-router-native": "^6.23.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
