--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -18,40 +18,45 @@
     "@expo/vector-icons": "^14.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-community/datetimepicker": "^8.1.0",
-    "@react-native-community/slider": "^4.5.2",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/slider": "4.5.2",
+    "@react-native/metro-config": "^0.74.84",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
     "@rneui/themed": "^4.0.0-rc.8",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.11",
+    "expo": "~51.0.12",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.15",
-    "expo-device": "^6.0.2",
+    "expo-dev-client": "~4.0.17",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-location": "^17.0.1",
-    "expo-notifications": "^0.28.7",
-    "expo-router": "~3.5.15",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.9",
+    "expo-router": "~3.5.16",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "^0.74.2",
+    "firebase": "^10.12.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.4",
-    "react-native-screens": "^3.31.1",
-    "react-native-web": "^0.19.12",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "^1.4.0",
+    "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
+    "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-transform-class-properties": "^7.24.7",
@@ -60,9 +65,9 @@
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "jest": "^29.7.0",
-    "jest-expo": "~51.0.1",
+    "@types/react": "~18.2.79",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-native-dotenv": "^3.4.11",
     "typescript": "~5.3.3"
