--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qf-app-nuevo",
-  "main": "expo-router/entry",
+  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -19,11 +19,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "4.5.2",
     "@react-native/metro-config": "^0.74.84",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
     "@rneui/themed": "^4.0.0-rc.8",
     "deprecated-react-native-prop-types": "^5.0.0",
