--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "cross-env NODE_ENV=development npx expo start",
+    "start-prod": "cross-env NODE_ENV=production npx expo start -c",
+    "start2": "npx expo start -c",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -15,7 +17,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-community/datetimepicker": "8.0.1",
@@ -28,29 +30,34 @@
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@rnmapbox/maps": "^10.1.27",
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.12",
+    "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.17",
+    "expo-dev-client": "~4.0.20",
     "expo-device": "~6.0.2",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.9",
-    "expo-router": "~3.5.16",
+    "expo-notifications": "~0.28.10",
+    "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.20",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
+    "metro": "~0.80.8",
+    "metro-config": "^0.80.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
@@ -68,6 +75,7 @@
     "@babel/preset-env": "^7.24.7",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.79",
+    "cross-env": "^7.0.3",
     "jest": "^29.4.0",
     "jest-expo": "^51.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
