--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "firebase": "^10.12.2",
     "metro": "~0.80.8",
     "metro-config": "^0.80.9",
+    "qf-app-nuevo": "file:",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
