--- a/app.json
+++ b/app.json
@@ -57,6 +57,12 @@
         {
           "enableGooglePay": true
         }
+      ],
+      [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "DEFAULT"
+        }
       ]
     ],
     "experiments": {
