--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-location": "~17.0.1",
     "expo-notifications": "~0.28.10",
     "expo-router": "~3.5.18",
+    "expo-sensors": "~13.0.9",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -51,7 +52,6 @@
     "firebase": "^10.12.2",
     "metro": "~0.80.8",
     "metro-config": "^0.80.9",
-    "qf-app-nuevo": "file:",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -64,7 +64,8 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-screen-orientation": "~7.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
